--- a/dapp/package.json
+++ b/dapp/package.json
@@ -9,13 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.3.0",
+    "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "22.14.0",
-    "@types/react": "19.1.0",
-    "typescript": "5.8.3"
+    "react-dom": "^19.0.0",
+    "web3": "^4.16.0"
   }
 }
